Prepare for Smartschool Print Clustering
See: #638